--- a/03_lessons_learned/lessons_learned.Rmd
+++ b/03_lessons_learned/lessons_learned.Rmd
@@ -31,7 +31,7 @@ lc_loans_nlp <- lc_loans %>% filter(issue_year<2015)
 ```
 
 
-##Lesson 1: I have a degree in NLP and its #takingmeplaces
+##Lesson 1: I have a degree in NLP and "its #takingmeplaces"
 One of the interesting things about the Lending Club dataset is that you get to read the borrower's story when they file out a request for a loan. For instance, here are some entries:
 
     - I need to upgrade my business technologies.
@@ -63,15 +63,15 @@ ggplot(data = before2015, aes(x=grade, y=median_ann_r, color=comment_exists))+
 
 
 ##Lesson 2: Defaults aren't everything--it's the bottom line return that counts
-For an investor that purchases notes through Lending Club, defaults and charge-offs are very important, since they can lead to a large negative loss on their bottom line. Nonetheless, an often ignored aspect of default behavior is that not all bad borrowers behave the same way. To give you an example, here is a list of 3 "bad" borrowers:
+For an investor that purchases notes through Lending Club, defaults and charge-offs are very important, since they can lead to a large loss on their bottom line. Nonetheless, an often ignored aspect of default behavior is that not all bad borrowers behave the same way. To give you an example, here are 3 examples of "bad" borrowers:
 
- - Borrower 1: Defaults on the first payment. Dissapears from the face of the Earth after getting the loan. Loss of principal: 100%; Loss of interest: 100%
- - Borrower 2: Makes a couple of payments, but then defaults. After a few months rsome of the principal was recovered. Loss of principal: 20%; Loss of interest: 80%.
+ - Borrower 1: Dissapears from the face of the Earth after getting the loan. Defaults on the first payment. Loss of principal: 100%; Loss of interest: 100%
+ - Borrower 2: Makes a couple of payments, but then defaults. After a few months some of the principal was recovered. Loss of principal: 20%; Loss of interest: 80%.
  - Borrower 3: Defaults on one of the last few payments on the loan. Loss of principal: 4%; Loss of interest: 2%.
     
-In the scenario above, lending to Borrower 1, will lead to a -100% return loss. In the case of Borrower 2, we might be close to breaking even. For Borrower 3, we are actually making money, even though the borrower defaults. What this esentially means is that default behavior should be generally considered a continous variable rather than a rough discrete measure. 
+In the scenario above, lending to Borrower 1, will lead to a -100% return. In the case of Borrower 2, we might be close to breaking even. For Borrower 3, we are actually making money, even though the borrower defaults. What this esentially means is that default behavior should be generally considered a continous variable rather than a rough discrete measure. 
 
-In the figure below, I plotted the annualized and cumulative returns for 5000 out of 65000 loans that have the status of charged off or defaulted. You can note that there is a very clear non-linear relationship between the return which the loan gives and it's loan status. Most of the bad loans don't end up in 100% loss of principal, and there are a few loans (4.2%) that have positive returns, despite their 'bad loan' status.
+In the figure below, I plotted the annualized and cumulative returns for 5000 out of 65000 loans that have the status of charged off or defaulted. You can note that there is a very clear non-linear relationship between the return which the loan gives and its loan status. Most of the bad loans don't end up in 100% loss of principal, and there are a few loans (4.2%) that have positive returns, despite their 'bad loan' status.
 
 ```{r, fig.width = 9.5}
 #create var for loans with  positive return, otherwise 0
@@ -103,10 +103,10 @@ ggplotly(ggplot(data = bad_loans2, aes(x=`Cumulative Return`,
 
 This observation has important implications, because when one tries to build a credit model, the loan status label might not be the best outcome variable to use. Instead, a more appropriate outcome variable would be cummulative or annualized return of a loan or a variable that categorizes a loan as having a positive or negative return. 
 
-#Lesson 3: A ML Toy Risk Model
-This lesson is a follow-up on lesson 2. The goal will be to build a prediction algorithm that identifies which loans are likely to have positive cumulative returns. In other words, I don't predict the default classification outcome that is provided by Lending Club. Instead, I first calculate the cumulative returns based on all the payments and initial investment bade by the lender. Then I create an outcome variable where loans are categorized as having either positive or negative return. I used five different prediction algorithms and also a linear ensemble of those 5 algorithms (though it didn't lead to any improvements in returns). All predictors in the model have been carefully screened for leakage. 
+#Lesson 3: Pre-liminary ML for predicting returns
+This lesson is a follow-up on lesson 2. The goal will be to build a prediction algorithm that identifies which loans are likely to have positive cumulative returns. In other words, I don't predict the default classification outcome that is provided by Lending Club. Instead, I first calculate the cumulative returns based on all the payments and initial investment made by the lender. Then I create an outcome variable where loans are categorized as having either positive or negative returns. I used five different prediction algorithms and also a linear ensemble of those 5 algorithms (though it didn't lead to any improvements in returns). All predictors in the model have been carefully screened for leakage. 
 
-You can see that any of the prediction algorithms that were implemented provide at least a 4.5% improvement in mean returns and at least a 3% improvement in median returns. Note that the reason why baseline cumulative returns are so low is because we are only dealing with loans that have a completed status (either fully paid, charged-off, or defaulted). Since the majority of the loans were issued in the last 1.5 years and the default hazard rates are higher in the first few months after origination, we have a very large chunk of charged-off loans that pulls our returns down. You can see the detail of the model_building processing in the file ml_ensemble.R
+You can see that all of the prediction algorithms that were implemented provide at least a 4.5% improvement in mean returns and at least a 3% improvement in median returns relative to the baseline. The basiline here is defined as the universe of all loans. Note that the reason why baseline cumulative returns are so low is because we are only dealing with loans that have a completed status (either fully paid, charged-off, or defaulted). Since the majority of the loans were issued in the last 1.5 years and the default hazard rates are higher in the first few months after origination, we have a very large chunk of charged-off loans that pulls our returns down. You can see the detail of the model building processing in the file ml_ensemble.R
 
 ```{r, fig.width = 10}
 results4<-read.csv("results4.csv")
@@ -125,16 +125,16 @@ ggplot(results4, aes(return_type, return)) +
        x = toupper("Return Type"), y = toupper("Cumulative Return")) 
 ```
 
-You can see below the VARImp for the top 15 predictors in XGBoost and how feature that identifies if a comment is present comes among the top 10:
+You can see below the VARImp for the top 15 predictors in XGBoost and how the feature that identifies if a comment is present comes among the top 3:
 
 ![](lessons_learned_files/figure-html/varImp.png)
 
-The models created in this section are just a starting point. Future improvement could:
+The models created in this section are just a starting point. Future improvements could use:
 
-- Obviously use more training data
+- More training data
 - Paramater tuning
 - Model stacking
-- Use cumulative return as a continous variable rather than using a binary variable. 
+- Cumulative return as a continous variable rather than using a binary variable. 
 
 
 
